crates/test-files/fixtures/compile_errors/init_wrong_return_type.fe
contract Foo:
    fn __init__() -> u64:
        return 10